Use scale on player only to avoid z-index bug

--- a/src/layouts/RecordingLayout/RecordingLayout.scss
+++ b/src/layouts/RecordingLayout/RecordingLayout.scss
@@ -57,7 +57,7 @@
   .RecordingLayout__variations {
     .content {
       @include v-stack-c;
-      @include l-pad($gap-xl);
+      @include l-pad($gap-lg);
       gap: $txt-ml;
       .RecordingLayout__player-container {
         @include v-stack;
@@ -68,6 +68,9 @@
           @include l-pad($gap-lg);
         }
       }
+    }
+    .RecordingLayout__variations__variation {
+      scale: 0.95;
     }
   }
 }
